--- a/spcs-basic/service/index.html
+++ b/spcs-basic/service/index.html
@@ -4,6 +4,7 @@
     <title>Welcome to SPCS + NA</title>
   </head>
   <body>
+    <h1>Hello World!</h1>
     <p>We can show a container-based UI!</p>
   </body>
 </html>
